@@ -49,7 +49,7 @@ DriverPath=server/drivers/
 #   IOWarrior, irman, joy, lb216, lcdm001, lcterm, lirc, lis, MD8800,
 #   mdm166a, ms6931, mtc_s16209x, MtxOrb, mx5000, NoritakeVFD, picolcd,
 #   pyramid, sed1330, sed1520, serialPOS, serialVFD, shuttleVFD, sli,
-#   stv5730, svga, t6963, text, tyan, ula200, xosd
+#   stv5730, svga, t6963, text, tyan, ula200, vlsys_m428, xosd
 Driver=curses
 
 # Tells the driver to bind to the given interface
@@ -1157,6 +1157,14 @@ Device=/dev/lcd
 
 # Set the communication speed [default: 19200; legal: 1200, 2400, 9600, 19200, 38400, 57600, 115200]
 Speed=19200
+
+
+
+## vlsys_m428 for VFD/IR combination in Moneual MonCaso 320 ##
+[vlsys_m428]
+
+# Select the output device to use [default: /dev/ttyUSB0]
+#Device=/dev/ttyUSB0
 
 
 
