@@ -53,6 +53,7 @@ well as the configuration of LCDd.
 &text;
 &tyan;
 &ula200;
+&vlsys_m428;
 &xosd;
 
 &ppttrouble;
